--- a/Sejal_Portfolio/css/style.css
+++ b/Sejal_Portfolio/css/style.css
@@ -13,11 +13,15 @@ body {
 }
 
 .title-logo {
-	margin-top: 20px;
+	margin-top: 30px;
+	height: 100px;
 }
 
 .title-super {
 	font-size: 60px;
+}
+
+.modal-image {
 }
 
 .size {
@@ -32,5 +36,10 @@ body {
 
 .connect {
 	padding-right: 45px;
+}
+
+#main {
+	height: 350px;
+	width: 1140px;
 }
 
